k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-ui
  namespace: churn-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: churn-ui
  template:
    metadata:
      labels:
        app: churn-ui
    spec:
      containers:
        - name: churn-ui
          image: tobichngoc/churn-ui:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
          readinessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_stcore/health
              port: 8501
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
