k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-api
  namespace: churn-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
spec:
  selector:
    app: churn-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
  type: NodePort
  externalTrafficPolicy: Local
