k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-ui
  namespace: churn-app
spec:
  selector:
    app: churn-ui
  ports:
    - name: http
      port: 8501
      targetPort: 8501
      nodePort: 30501
  type: NodePort
  externalTrafficPolicy: Local
