k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn-app-ingress
  namespace: churn-app
spec:
  ingressClassName: nginx
  rules:
    - host: ui.churn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churn-ui
                port:
                  number: 8501
    - host: api.churn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: churn-api
                port:
                  number: 8000
    - host: prometheus.churn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana.churn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
